# IsTablet

./: CMakeLists.txt  showpopup.cpp  test-handheld.cpp
